CHATS_SIT/force-app/main/default/objects/T_INDIV_VERIF__c.object
<CustomObject>
    <description>Individual verification tracking</description>
    <fields>
        <fullName>CDE_TYPE_INFO_INDIV__c</fullName>
        <description>Type of Individual Information</description>
        <label>Type of Individual Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00366</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Information ID</label>
        <referenceTo>T_SBSD_INDIV_INFO__c</referenceTo>
        <relationshipLabel>Individual Verification</relationshipLabel>
        <relationshipName>Individual_Verification</relationshipName>
        <type>Lookup</type> 
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Individual Verification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Individual Verification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Verification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>